Fix layout issue with 🍣

--- a/src/doc/sass/style.scss
+++ b/src/doc/sass/style.scss
@@ -15,11 +15,12 @@ $font-family-sans: Verdana, sans-serif;
 $font-family-mono: Menlo, Courier, monospace;
 
 $content-width: 620px;
-$pane-width: 250px;
-$pane-narrow-width: 220px;
-$menu-width: $pane-width;
+$aero-width: 250px;
+$aero-narrow-width: 220px;
+$menu-width: $aero-width;
 $menu-button-size: 60px;
 $narrow-width: $content-width + $menu-width * 2;
+$sketch-block-narrow-width: 500px;
 
 @mixin clearfix() {
 	&:after {
@@ -126,14 +127,14 @@ a {
 			top: 0;
 			width: 100%;
 		}
-		&_paneContainer {
+		&_aeroContainer {
 			bottom: 0;
 			box-shadow: 0 1px 3px rgba(black, 0.3);
 			left: 0;
 			margin: auto;
 			position: absolute;
 			right: 0;
-			width: $pane-width;
+			width: $aero-width;
 		}
 	}
 }
@@ -244,13 +245,13 @@ a {
 				background-color: $code-block-example-background-color;
 			}
 		}
-		&_paneContainer {
+		&_aeroContainer {
 			box-shadow: 0 1px 3px rgba(black, 0.3);
 			margin: 0 auto;
-			width: $pane-width;
+			width: $aero-width;
 
 			@media (max-width: $narrow-width) {
-				max-width: $pane-width;
+				max-width: $aero-width;
 				width: auto;
 			}
 		}
@@ -307,6 +308,10 @@ a {
 	overflow: hidden;
 	position: relative;
 
+	@media (max-width: $sketch-block-narrow-width) {
+		height: auto;
+	}
+
 	@at-root {
 		&_sketchLayout {
 			bottom: 0;
@@ -314,13 +319,25 @@ a {
 			position: absolute;
 			right: 250px;
 			top: 0;
+
+			@media (max-width: $sketch-block-narrow-width) {
+				height: 240px;
+				position: relative;
+				right: auto;
+			}
 		}
-		&_tpLayout {
+		&_aeroLayout {
 			box-shadow: 0 1px 3px rgba(black, 0.3);
 			position: absolute;
 			right: 0;
 			top: 0;
 			width: 250px;
+
+			@media (max-width: $sketch-block-narrow-width) {
+				position: static;
+				right: auto;
+				width: auto;
+			}
 		}
 		&_sketch {
 			display: block;
